@@ -169,6 +169,7 @@ Bug Fixes:
 	<gameutils> now auto-detects module-level handlers and listeners (omit "class")
 	Fixed problem when using <callback> element to define new callbacks
 	New <callback>s no longer require a default value (omit both "type" and "default")
+	Logs a warning if a listener returns a value
 
 
 ____________________________________________________________________________________________________
